Update packages, add eslint, prettier

--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.7.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-flv-player": "^1.0.9",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.2",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +40,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3"
   }
 }
