--- a/server/package.json
+++ b/server/package.json
@@ -18,19 +18,22 @@
   },
   "homepage": "https://github.com/zntb/Twitch-Clone#readme",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
-    "joi": "^17.11.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "punycode": "^2.3.1",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6"
+  }
 }
